# OccTest

./: CMakeLists.txt  README.md
inc/: MyQtWidgetsApplication.h  Occ.h  OccQt.h
src/: MyQtWidgetsApplication.cpp  Occ.cpp  OccQt.cpp  main.cpp
